objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>Non AC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>